fine tunning (done)

--- a/index.html
+++ b/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta name="description" content="Daniel Nedelcu - Personal portfolio website" />
+	<meta name="description" content="Daniel Nedelcu - Personal portfolio website"/>
   <meta name="author" content="Daniel Nedelcu">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="utf-8">
-
 	<title>Daniel Nedelcu - Portfolio</title>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:200,400,600" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" rel="stylesheet" crossorigin="anonymous">
-	<script src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
 </head>
 <body>
 	<div class="container">
-
 		<!--HEADER (logo + name)-->
 		<header class="row header">
 			<div class="col-md-2 col-sm-2 col-xs-2 logo-cont">
@@ -40,27 +37,25 @@
 		<section class="row">
 			<div class="col-sm-12">
 				<picture>
-					<source
-						media="(min-width: 768px)"
-						srcset="img/main_1.jpg">
-					<img class="img-responsive main-image" alt="code perspective" src="img/main_2.jpg">  <!--2 images !!!-->
+					<source	media="(min-width: 768px)" srcset="img/main_1.jpg">
+					<img class="img-responsive main-image" alt="code perspective" src="img/main_2.jpg">
 				</picture>
 				<div class="caption1 text-center text-bold">
         	<p><mark>I ❤ white !</mark></p>
 					<p><mark>...and clean, minimalistic designs</mark></p>
       	</div>
 				<div class="caption2 text-center text-bold">
-        	<p><mark>oh 😼</mark></p>
-					<p><mark>...and responsive layouts</mark></p>
+					<p><mark>I ❤ white !</mark></p>
+					<p><mark>...and clean, minimalistic designs</mark></p>
+					<p><mark>oh 😼, and responsive layouts</mark></p>
       	</div>
 			</div>
 		</section>
-
 		<!--PROJECTS-->
 		<section class="row all-projects text-center">
 			<div class="col-md-12">
 				<h3 class="text-lowercase text-left text-bold text-washed">
-				Featured  Work ⬇
+				Featured Work ⬇
 				</h3>
 			</div>
 			<article class="article col-md-4 col-sm-6">
@@ -79,9 +74,7 @@
 				<a class="link-to fontawesome-globe" target="_blank" href="http://www.pandaproject.ro"> pandaproject.ro</a>
 			</article>
 		</section>
-
 		<hr class="bottom-divider">
-
 		<footer class="row footer">
 			<div class="col-md-12 social text-center">
 				<a class="fontawesome-facebook social-icon" href="https://facebook.com/dan.nede" target="_blank"></a>
@@ -89,9 +82,7 @@
 				<a class="fontawesome-github social-icon" href="https://github.com/nedelcos" target="_blank"></a>
 			</div>
 		</footer>
-
 	</div>
-
 	<!-- Modals -->
 	<div class="modal fade" id="project-virtualx" tabindex="-1" role="dialog" aria-labelledby="virtualxLabel" aria-hidden="true">
 			<div class="modal-dialog">
@@ -171,6 +162,5 @@
 					</div>
 			</div>
 	</div>
-
 </body>
 </html>
