--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" rel="stylesheet" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script src="https://use.fontawesome.com/c54842ddb7.js"></script>
 </head>
 <body>
 	<div class="container">
 		<!--HEADER (logo + name)-->
 		<header class="row header">
-			<div class="col-md-2 col-sm-2 col-xs-2 logo-cont">
+			<div class="logo-cont col-xs-2">
 				<a href="index.html">
 					<img class="logo" src="img/logo.svg" alt="daniel logo">
 				</a>
 			</div>
-			<div class="col-md-10 col-sm-10 col-xs-10 name-cont text-right text-uppercase">
+			<div class="name-cont text-right text-uppercase col-xs-10">
 				<h1 class="my-name text-thin">Daniel Nedelcu</h1>
 				<h4 class="my-title text-bold text-grey">Front End Developer</h4>
 			</div>
@@ -61,25 +62,25 @@
 			<article class="article col-md-4 col-sm-6">
 				<img class="img-responsive project-img" alt="rentador screenshot" src="img/thumb_virtualx.jpg" data-toggle="modal" data-target="#project-virtualx">
 				<h4 class="featured-work-title text-uppercase text-bold text-grey">Virtual eXperience</h4>
-				<a class="link-to fontawesome-globe" target="_blank" href="http://www.virtualx.space"> virtualx.space</a>
+				<a class="fa fa-globe proj-icon" target="_blank" href="http://www.virtualx.space"><span class="proj-link"> virtualx.space</span></a>
 			</article>
 			<article class="article col-md-4 col-sm-6">
 				<img class="img-responsive project-img" alt="rentador screenshot" src="img/thumb_rentador.jpg" data-toggle="modal" data-target="#project-rentador">
 				<h4 class="featured-work-title text-uppercase text-bold text-grey">Rentador Rentals</h4>
-				<a class="link-to fontawesome-globe" target="_blank" href="http://www.rentador.ro"> rentador.ro</a>
+				<a class="fa fa-globe proj-icon" target="_blank" href="http://www.rentador.ro"><span class="proj-link"> rentador.ro</span></a>
 			</article>
 			<article class="article col-md-4 col-sm-6">
 				<img class="img-responsive project-img" alt="rentador screenshot" src="img/thumb_panda.jpg" data-toggle="modal" data-target="#project-panda">
 				<h4 class="featured-work-title text-uppercase text-bold text-grey">Panda Project</h4>
-				<a class="link-to fontawesome-globe" target="_blank" href="http://www.pandaproject.ro"> pandaproject.ro</a>
+				<a class="fa fa-globe proj-icon" target="_blank" href="http://www.pandaproject.ro"><span class="proj-link"> pandaproject.ro</span></a>
 			</article>
 		</section>
 		<hr class="bottom-divider">
 		<footer class="row footer">
 			<div class="col-md-12 social text-center">
-				<a class="fontawesome-facebook social-icon" href="https://facebook.com/dan.nede" target="_blank"></a>
-				<a class="fontawesome-linkedin social-icon" href="https://www.linkedin.com/in/danielgnedelcu" target="_blank"></a>
-				<a class="fontawesome-github social-icon" href="https://github.com/nedelcos" target="_blank"></a>
+				<a class="fa fa-facebook social-icon" href="https://facebook.com/dan.nede" target="_blank"></a>
+				<a class="fa fa-linkedin social-icon" href="https://www.linkedin.com/in/danielgnedelcu" target="_blank"></a>
+				<a class="fa fa-github social-icon" href="https://github.com/nedelcos" target="_blank"></a>
 			</div>
 		</footer>
 	</div>
