--- a/index.html
+++ b/index.html
@@ -163,5 +163,18 @@
 					</div>
 			</div>
 	</div>
+
+	<script type="text/javascript">
+    $(document).ready(function()
+    {
+        if (navigator.appName == "Opera")
+        {
+            $('#myproject-virtualx').removeClass('fade');
+						$('#project-rentador').removeClass('fade');
+						$('#project-panda').removeClass('fade');
+        }
+    });
+</script>
+
 </body>
 </html>
