--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 			</div>
 	</div>
 
-	<script type="text/javascript">
+	<script>
     $(document).ready(function()
     {
         if (navigator.appName == "Opera")
